--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,20 @@
 {
-  "extends": ["next", "next/core-web-vitals", "eslint:recommended"],
-  "globals": { "React": "readonly" },
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:storybook/recommended"
+  ],
+  "globals": {
+    "React": "readonly"
+  },
   "rules": {
     "no-unused-vars": [
       "warn",
-      { "args": "after-used", "argsIgnorePattern": "^_" }
+      {
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
     ]
   }
 }
