--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@storybook/addon-docs": "^7.0.11",
     "@storybook/addon-essentials": "^7.0.11",
     "@storybook/addon-interactions": "^7.0.11",
     "@storybook/addon-links": "^7.0.11",
+    "@storybook/addon-styling": "^1.0.8",
     "@storybook/blocks": "^7.0.11",
     "@storybook/nextjs": "^7.0.11",
     "@storybook/react": "^7.0.11",
