--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^7.0.12",
     "@storybook/addon-docs": "^7.0.11",
     "@storybook/addon-essentials": "^7.0.11",
     "@storybook/addon-interactions": "^7.0.11",
